src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "~@angular/material/prebuilt-themes/indigo-pink.css";

@font-face {
   font-family: Scheherazade;
   font-style: normal;
   font-display: block;
   font-weight: 400;
   src: url(https://deendev.com/fonts/scheh.woff2) format('woff2'),
   url(https://deendev.com/fonts/scheh.woff) format('woff');
}
@font-face {
   font-family: Scheherazade;
   font-style: normal;
   font-display: block;
   font-weight: 700;
   src: url(https://deendev.com/fonts/scheh-b.woff2) format('woff2'),
   url(https://deendev.com/fonts/scheh-b.woff) format('woff');
}

/* General */
html {
   font-size: 22px; 
}

@media (max-width: 768px) {
   html {
      font-size: 19px;
   }
}

@media (max-width: 576px) {
   html {
      font-size: 17px;
   } 
   html.safari {
      font-size: 18px;
   }
}

body {
   direction: rtl;
   margin: 0 auto;
}

/** Angular Material Overrides **/

/* Respect 'rtl' */
.controls .mat-standard-chip .mat-chip-remove, .controls .mat-standard-chip .mat-chip-trailing-icon {
   margin-right: 8px;
   margin-left: 0px;
}

/* .controls .mat-form-field-infix {
   border-top: 0.2rem;
} */

.opts .mat-form-field {
   text-align: right;
}

.mat-select-panel .mat-optgroup-label, .mat-select-panel .mat-option {
   text-align: right;
}


/** Raised card **/
.card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
 }
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 /* Add some padding inside the card container */
 .card-container {
   padding: 0.2rem 0.1rem;
 }

/*** Option groups ***/

.opts {
   width: 100%;
   border: 1px gray solid;
   border-radius: 0.2rem;
   margin-top: 0.2rem;
}

.opts-group {
   width: 100%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
}

.opts-title {
   display: flex;
   flex-direction: row;
   align-items: center;
}

.opts-title-item {
   margin-right: 0.1rem;
   margin-left: 0.1rem;
}

/** Ayah **/

.ayah-style {
   font-family: Scheherazade;
   font-size: 1.3rem;
   padding: 0.5rem 0.3rem;
}

.ayah-word-highlight {
   color: hsla(0, 85%, 50%, 1);
}

.ayah-word-click {
    cursor: pointer;
}

.ayah-ref {
   color: #888;
   font-size: 0.9rem;
   text-decoration: none;
   padding: 0.2rem;
}

